examples/test/testpolicy819.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy819
  namespace: namespace240
spec:
  podSelector:
    matchLabels:
      key45: value5
      key15: value36
      key38: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value20
      podSelector:
        matchLabels:
          key26: value14
